<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DicodingEvent</string>
    <string name="event_name">event_name</string>
    <string name="description">description</string>
    <string name="title_home">Home</string>
    <string name="event_upcoming">Upcoming</string>
    <string name="event_finished">Finished</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="title_finished">Finished Events</string>
    <string name="event_quota">event quota</string>
    <string name="title_detail">detail activity</string>
    <string name="event_summary">event summary</string>
    <string name="begin_time">begin time</string>
    <string name="event_imagelogo">image logo</string>
    <string name="event_category">category</string>
    <string name="event_owner">event owner</string>
    <string name="event_registrants" tools:ignore="UnusedResources">event registranst</string>
    <string name="finished_events">Finished Events</string>
    <string name="Register">Register</string>
    <string name="event_city">event city</string>
    <string name="detail_event">Detail Event</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_events_found">No events found</string>
    <string name="event_favorite">Favorite</string>
    <string name="title_favorite">Favorite Event</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="diselenggarakan_oleh">Diselenggarakan oleh: %1$s</string>
    <string name="sisa_quota">Sisa quota: %1$s</string>
    <string name="setting">setting</string>
    <string name="setting_title">Setting</string>
    <string name="mode">Dark mode</string>
    <string name="Setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="notifications_permission_granted">Notifications permission granted</string>
    <string name="notifications_permission_rejected">Notifications permission rejected</string>
    <string name="error_loading_events_please_try_again">Error loading events. Please try again.</string>
</resources>