<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/event_upcoming_24dp_e8eaed_fill0_wght400_grad0_opsz24"
        android:title="@string/event_upcoming"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/event_available_24dp_e8eaed_fill0_wght400_grad0_opsz24"
        android:title="@string/event_finished"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/event_favorite"
        android:iconTint="@color/black"/>


</menu>